# rosbag_writer_cpp

./: CMakeLists.txt  read_bag.py
include/: Header.h  utils.h
include/RosbagReader/: Header.h  RosbagReader.h
include/RosbagWriter/: Header.h  RosbagWriter.h  utils.h
src/: Header.h  RosbagReader.cpp  RosbagWriter.cpp  RosbagWriter.h  main.cpp  utils.h
tests/: CMakeLists.txt
tests/src/: Test_Header.cpp  test_main.cpp
